# Adafruit_CircuitPython_HID

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.rst  api.rst  conf.py  keyboard.rst  keyboard_layout_us.rst  keycode.rst  mouse.rst  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  release.yml  release_gh.yml  release_pypi.yml
adafruit_hid/: __init__.py  consumer_control.py  consumer_control_code.py  de_de.py  digitizer.py  en_us.py  gamepad.py  keyboard.mpy  keyboard.py  keyboard_layout.py  keyboard_layout_base.py  keyboard_layout_de.py  keyboard_layout_dvorak.py  keyboard_layout_fr.py  keyboard_layout_us.py  keyboard_layout_us_dvo.py  keycode.py  mouse.py  us_keyboard_layout.py
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/_static/: custom.css
examples/: HID_simpletest.py  gamepad.py  hid_consumer_control_brightness.py  hid_gamepad.py  hid_joywing_gamepad.py  hid_keyboard_fr.py  hid_keyboard_layout.py  hid_keyboard_shortcuts.py  hid_simple_gamepad.py  hid_simpletest.py  joywing_gamepad.py  keyboard_shortcuts.py  scroll.py  simple_gamepad.py
